--- a/deepseek/api/deepseek_api.ipynb
+++ b/deepseek/api/deepseek_api.ipynb
@@ -10,22 +10,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: openai in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (1.79.0)\n",
-      "Requirement already satisfied: anyio<5,>=3.5.0 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from openai) (4.9.0)\n",
-      "Requirement already satisfied: distro<2,>=1.7.0 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from openai) (1.9.0)\n",
-      "Requirement already satisfied: httpx<1,>=0.23.0 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from openai) (0.28.1)\n",
-      "Requirement already satisfied: jiter<1,>=0.4.0 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from openai) (0.10.0)\n",
-      "Requirement already satisfied: pydantic<3,>=1.9.0 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from openai) (2.11.4)\n",
-      "Requirement already satisfied: sniffio in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from openai) (1.3.1)\n",
-      "Requirement already satisfied: tqdm>4 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from openai) (4.67.1)\n",
-      "Requirement already satisfied: typing-extensions<5,>=4.11 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from openai) (4.13.2)\n",
-      "Requirement already satisfied: idna>=2.8 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
-      "Requirement already satisfied: certifi in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from httpx<1,>=0.23.0->openai) (2025.4.26)\n",
-      "Requirement already satisfied: httpcore==1.* in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from httpx<1,>=0.23.0->openai) (1.0.9)\n",
-      "Requirement already satisfied: h11>=0.16 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.16.0)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
-      "Requirement already satisfied: pydantic-core==2.33.2 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from pydantic<3,>=1.9.0->openai) (2.33.2)\n",
-      "Requirement already satisfied: typing-inspection>=0.4.0 in /home/django/miniconda3/envs/deepseek/lib/python3.13/site-packages (from pydantic<3,>=1.9.0->openai) (0.4.0)\n"
+      "Requirement already satisfied: openai==1.82.0 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (1.82.0)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from openai==1.82.0) (4.10.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from openai==1.82.0) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from openai==1.82.0) (0.28.1)\n",
+      "Requirement already satisfied: jiter<1,>=0.4.0 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from openai==1.82.0) (0.10.0)\n",
+      "Requirement already satisfied: pydantic<3,>=1.9.0 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from openai==1.82.0) (2.11.7)\n",
+      "Requirement already satisfied: sniffio in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from openai==1.82.0) (1.3.1)\n",
+      "Requirement already satisfied: tqdm>4 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from openai==1.82.0) (4.67.1)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.11 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from openai==1.82.0) (4.14.1)\n",
+      "Requirement already satisfied: idna>=2.8 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from anyio<5,>=3.5.0->openai==1.82.0) (3.10)\n",
+      "Requirement already satisfied: certifi in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from httpx<1,>=0.23.0->openai==1.82.0) (2025.8.3)\n",
+      "Requirement already satisfied: httpcore==1.* in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from httpx<1,>=0.23.0->openai==1.82.0) (1.0.9)\n",
+      "Requirement already satisfied: h11>=0.16 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai==1.82.0) (0.16.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from pydantic<3,>=1.9.0->openai==1.82.0) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from pydantic<3,>=1.9.0->openai==1.82.0) (2.33.2)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from pydantic<3,>=1.9.0->openai==1.82.0) (0.4.1)\n",
+      "Requirement already satisfied: colorama in d:\\1.learn\\learn_llm\\deepseek-quickstart\\deepseek-quickstart\\lib\\site-packages (from tqdm>4->openai==1.82.0) (0.4.6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.1.1 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -35,13 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "14dc02a3-4736-45f7-a2da-1978123fac95",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dotenv import load_dotenv\n",
     "import os\n",
     "from openai import OpenAI\n",
+    "\n",
+    "# 加载 .env 文件中的环境变量\n",
+    "load_dotenv()\n",
     "\n",
     "# 从环境变量获取 DeepSeek API Key\n",
     "api_key = os.getenv(\"DEEPSEEK_API_KEY\")\n",
@@ -60,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "428f7ead-142c-4f5c-a57b-d9194b51d725",
    "metadata": {},
    "outputs": [
@@ -111,7 +125,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "deepseek-quickstart",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.6"
   }
  },
  "nbformat": 4,
